style.css
.title,
.sub-title {
  font-family: "Dosis";
  letter-spacing: 2px;
  text-transform: uppercase;
  line-height: 1.8;
}

.sub-title {
  margin-bottom: 2em;
  margin-top: 2em;
  max-width: 100%;
}

.sub-title,
.fade-in-by-word {
  visibility: hidden;
}

h2 .sub-title {
  font-size: 2em;
}

.animated {
  visibility: visible;
}

.landing,
.intro {
  align-items: center;
}

.landing,
.landing-img,
.content {
  width: 100%;
}

.landing,
.content {
  display: flex;
  flex-direction: column;
}

.content .quote {
  max-width: 80%;
  padding: 3em 0;
  text-align: center;
  margin-left: auto;
  margin-right: auto;
}

.quote {
  text-align: left;
}

.landing-img {
  background-image: url("assets/landing.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  margin: 0;
  padding: 0;
  position: fixed;
  z-index: -1;
}

#main-title {
  color: #fff;
  font-size: 2em;
  letter-spacing: 0.5em;
  opacity: 0.9;
  text-align: center;
}

.content {
  max-width: 845px;
  display: flex;
  justify-content: space-between;
  margin: auto;
}

.content::after {
  content: '';
  background: white;
}

.content p {
  margin: 1em;
}

.content-container p {
  text-align: center;
  /* text-align: left; */
}

.section-intro {
  align-items: center;
  background-color: #222;
  box-sizing: border-box;
  color: #fff;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 3em 8em;
  width: 100%;
}

.section-img {
  text-align: center;
}

.section-img > img {
  border: solid 1px rgba(10, 10, 10, 0.6);
  margin-left: 1em;
  max-height: 20em;
  max-width: 30em;
}

.content {
  background-color: #eeefee;
  text-align: left;
  padding: 1em;
}

.content-container {
  display: flex;
}

.multi {
  flex-direction: column;
}

.intro {
  flex-direction: row;
}

.section-body {
  margin-bottom: 2em;
}

.title-container {
  flex: 2;
  display: flex;
  align-items: center;
}

.ml15 .word {
  line-height: 1em;
}


.type-write .text-wrapper {
  position: relative;
  display: inline-block;
  padding-top: 0.1em;
  padding-right: 0.05em;
  padding-bottom: 0.15em;
}

.type-write .line {
  opacity: 0;
  position: absolute;
  left: 0;
  height: 100%;
  width: 3px;
  background-color: #222;
  transform-origin: 0 50%;
}

.type-write .line1 { 
  top: 0; 
  left: 0;
  padding: 0;
  margin: auto -5px;
}

.type-write .letter {
  display: inline-block;
  line-height: 1em;
  margin: 0
}



.footer-social-links a {
  width: 25px;
  height: 25px;
  line-height: 25px !important;
  position: relative;
  margin: 0 6px;
  text-align: center;
  display: inline-block;
  color: #111;
  -webkit-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
  -moz-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
  -o-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
  -ms-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
  transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
}

.footer a {
  color: #888;
  text-decoration: none;
  -webkit-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
  -moz-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
  -o-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
  -ms-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
  transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
}

.footer-social-links a:before {
  content: "";
  display: inline-block;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  border: 1px solid #111;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -o-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
  -moz-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
  -o-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
  -ms-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
  transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
}

.footer-social-links a {
  width: 25px;
  height: 25px;
  line-height: 25px !important;
  position: relative;
  margin: 0 6px;
  text-align: center;
  display: inline-block;
  color: #111;
}

i.fa {
  margin: 0;
  transform: scale(.7);
}

.footer-copy {
  margin-bottom: 5px;
  text-transform: uppercase;
  letter-spacing: 0.5em;
}

.font-alt {
  font-family: Dosis, arial, sans-serif;
  text-transform: uppercase;
  letter-spacing: 0.2em;
}

.footer {
  text-align: center;
}

.footer a {
  color: #888;
  text-decoration: none;
  -webkit-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
  -moz-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
  -o-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
  -ms-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
  transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
}

.footer-made {
  font-size: 11px;
  color: #999;
}

.fade-in-title .fade-in-letter {
  display: inline-block;
  line-height: 1em;
}

.footer-social-links a:hover {
  color: #fff;
}

.footer a:hover {
  color: #111;
  text-decoration: underline;
}

.footer-social-links a:hover:before {
  background: #111;
}

.morean-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

.morean-container > a > img {
  margin: 8px 8px 0;
}

/**
 * MEDIA QUERIES
 */
@media (max-width: 768px) {
  .sub-title {
    text-align: center;
  }

  .landing-img {
    background-image: url("assets/landing-tablet.png");
  }

  #main-title {
    padding: 1em;
  }

  .box {
    width: 100%;
  }

  .content {
    flex-direction: column;
  }

  .content,
  .section-intro {
    padding: 4em .5em;
  }

  .content,
  .section-intro {
    align-items: unset;
    flex-direction: column;
  }

  .content .quote {
    max-width: 95%;
  }

  .intro .quote {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  .content .quote {
    padding: 0;
  }
}

@media (max-width: 1200px) {
  .section-intro {
    flex-wrap: unset;
  }

  .section-img {
    margin: 20px;
  }

  .section-img > img {
    max-width: 90%;
  }

  .content {
    padding: 2em .8em;
  }
}

@media (max-width: 1450px) {
  .section-img {
    max-width: 50%;
  }
}

/* DESKTOP */

@media screen and (min-width: 768px) {
  .content {
      font-size: 22px;
  }

}

